closed img tags

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <img class="site-logo" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/AIU_logo.jpg?raw=true">
+        <img class="site-logo" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/AIU_logo.jpg?raw=true"/>
         <h1 class="title" id="H1">Alien Invasion Updates</h1>
     </header>
     <section class="top-grid">
@@ -50,9 +50,9 @@
         <p class="ad-text">survival gear store</p>
         <div class="desktop-only-wrapper">
           <h5>Go to store</h5>
-        <img class="desktop-only" alt="advertisement" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/vertical_ad.jpeg?raw=true">
+        <img class="desktop-only" alt="advertisement" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/vertical_ad.jpeg?raw=true/">
         </div>
-        <img class="portable-only" alt="advertisement" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/horizontal_ad.jpeg?raw=true">
+        <img class="portable-only" alt="advertisement" src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/horizontal_ad.jpeg?raw=true"/>
     </a>
 </div>
 
@@ -65,7 +65,7 @@
 <div class="flex-child twelve">
   <a href="link to article" target="_blank">
   <img class="img-height-size" alt="Bright star in red cloud" 
-  src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/alien_world.jpeg?raw=true">
+  src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/alien_world.jpeg?raw=true"/>
 <div class="preview-text">
   <h4>Alien Homeworld located</h4>
   <p>article preview article preview article preview article preview article preview
@@ -77,7 +77,7 @@
 <div class="flex-child eleven">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Sailboat going out to sea"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/sailboat.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/sailboat.jpeg?raw=true"/>
     <div class="preview-text">
   <h4>Zero contact with seafarers</h4>
   <p>article preview article preview article preview article preview article preview
@@ -89,7 +89,7 @@
 <div class="flex-child ten">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Couple being interviewed"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/couple_interview.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/couple_interview.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Interview: <span class="quote">"We were abducted"</span></h4>
       <p>article preview article preview article preview article preview article preview
@@ -101,7 +101,7 @@
 <div class="flex-child nine">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Circle hovering over rock formation"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/halo.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/halo.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Sightings linked to disappearances</h4>
       <p>article preview article preview article preview article preview article preview
@@ -113,7 +113,7 @@
 <div class="flex-child eight">
   <a href="link to article" target="_blank">
   <img class="img-height-size" alt="Protesters gathered outside mosque"
-  src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/blue_mosque.jpeg?raw=true">
+  src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/blue_mosque.jpeg?raw=true"/>
   <div class="preview-text">
     <h4>Worldwide demands for political action</h4>
     <p>article preview article preview article preview article preview article preview
@@ -125,7 +125,7 @@
 <div class="flex-child seven">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Computer screen with code"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/code.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/code.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Hackers launch counterattack</h4>
       <p>article preview article preview article preview article preview article preview
@@ -137,7 +137,7 @@
 <div class="flex-child six">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Child waiting among half empty grocery shelves"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/boy.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/boy.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Supply chains disrupted</h4>
       <p>article preview article preview article preview article preview article preview
@@ -149,7 +149,7 @@
 <div class="flex-child five">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Volcanic eruption"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/volcano2.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/volcano2.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Outlandish global scale volcanic activity</h4>
       <p>article preview article preview article preview article preview article preview
@@ -161,7 +161,7 @@
 <div class="flex-child four">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Smiling person carrying box and plant"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/ready_to_go.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/ready_to_go.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Phoenix man: <span class="quote">"I've been waiting"</span></h4>
       <p>article preview article preview article preview article preview article preview
@@ -173,7 +173,7 @@
 <div class="flex-child three">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="French policemen face crowd"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/police_france.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/police_france.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Police fight worldwide riots</h4>
       <p>article preview article preview article preview article preview article preview
@@ -185,7 +185,7 @@
 <div class="flex-child two">
   <a href="link to article" target="_blank">
     <img class="img-height-size" alt="Chaotic street scene"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/riot.jpg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/riot.jpg?raw=true"/>
     <div class="preview-text">
       <h4>Cities overrun by riots following invasion event</h4>
       <p>article preview article preview article preview article preview article preview
@@ -197,7 +197,7 @@
 <div class="flex-child one">
   <a href="link to article" target="_blank">
     <img class="img-width-size" alt="Evening view of Mexico City"
-    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/mexico_city2.jpeg?raw=true">
+    src="https://github.com/JosefinRobertsson/project-news-site/blob/master/Images/mexico_city2.jpeg?raw=true"/>
     <div class="preview-text">
       <h4>Alien species invades Earth</h4>
       <p>article preview article preview article preview article preview article preview
