--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,7 @@
 
     <section class="big-news">
       <img
-        src="https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97.jpg&signature=84c4ae426aa20e3cd289be3c411429bc"
+        src="https://ychef.files.bbci.co.uk/976x549/p01lms3p.jpg"
         alt="Main article"
       />
       <h2>
