--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
 
     <section class="big-news">
       <!-- The big news content -->
-	  <div class="big-news-box-1">
+	  <div class="big-news-box">
 	  <h1>
 		Taylor Swift’s cat is the wealthiest pet in the world
 	  </h1>
@@ -47,7 +47,7 @@
 	  </p>
 	</div>
 
-	<div class="big-news-box-2">
+	<div class="big-news-box">
 	  <h1>
 		More on Tay's cat
 	  </h1>
@@ -59,28 +59,28 @@
     <section class="grid-with-news-items">
       <!-- The other news  -->
 
-	<div class="news-item-1"> 
+	<div class="news-item"> 
 	  <h2>
 		Taylor Swift to direct her first movie
 	  </h2>
 	  <a href="https://www.theguardian.com/music/2022/dec/09/taylor-swift-direct-first-movie" target="_blank"> <img src=movie.jpeg> </a>
 	</div>
 
-	<div class="news-item-2">  
+	<div class="news-item">  
 		<h2>
 		  Listen: Spotify Playlist of Tay's songs about Jake 
 		</h2>
 	   <a href="https://open.spotify.com/playlist/7qlheZx3YuIaPsZIUoxPCE" target="_blank"> <img src="playlist.jpeg"> </a>
 	  </div>
 
-	<div class="news-item-3"> 
+	<div class="news-item"> 
 	  <h2>
 		Let's discuss meaning for every song from Lover
 	  </h2>
 	  <a href="https://time.com/5651207/taylor-swift-lover-songs-explained/" target="_blank"> <img src="lover.jpeg"> </a>
 	</div>
 
-	<div class="news-item-4"> 
+	<div class="news-item"> 
 		<h2>
 		  Taylor Swift propels vinyl sales
 		</h2>
@@ -91,7 +91,7 @@
 	  </p>
   </div>
   
-  <div class="news-item-5"> 
+  <div class="news-item"> 
 		<h2>
 		  Taylor Swift Performs “Anti-Hero” for the First Time at the 1975’s London Concert
 		</h2>
@@ -99,7 +99,7 @@
 	  </a>
   </div>
   
-  <div class="news-item-6"> 
+  <div class="news-item"> 
 		<h2>
 		  Taylor Swift-themed breakup bar in Chicago
 		</h2>
@@ -111,7 +111,7 @@
 		</p>
 	  </div>
 
-	<div class="news-item-7"> 
+	<div class="news-item"> 
 		<h2>
 		  Which Taylor Swift song defines you?
 		</h2>
