fixed some styling, added colours and one font

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,8 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
+    
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
@@ -16,7 +18,7 @@
 
             <!--LOGO for Company name-->        
             <div class="company-name">
-              <a href="x"class="active">Company name</a>
+              <a href="x"class="active">True Crime News</a>
             </div>
 
             <!-- NAVBAR FOR DESKTOP AND PAD -->
