Changed some styles

--- a/code/index.html
+++ b/code/index.html
@@ -57,7 +57,7 @@
     <article>
       <img src="./Images/ReindeerStockholm.jpg" alt="Raindeer standing around in snow">
       <h3>Come join the reindeer-run in Stockholm!</h3>
-        <p>A reindeer? In Stockholm? Isn't that a bit too far south? Yes, but reindeer can travel too you know, ever heard of Rudolph?. 
+        <p>A reindeer? In Stockholm? Isn't that a bit too far south? Yes, but reindeer can travel too you know, ever heard of Rudolph? 
           If you have no idea what to do this weekend and you want to experience something new, you can head out to Gärdet to watch a reindeer-run. Not with a sled behind 
           the reindeer but with humans on mini-skis. Sound wild? It is!
           The contestants will need to complete a course with twists and turns, while skiing behind their reindeer. Fastest to complete the course wins. And don't worry, this 
