--- a/code/index.html
+++ b/code/index.html
@@ -44,12 +44,12 @@
   <div class="grid-smaller-article"> 
     <article> 
       <img src="./Images/Denmark.jpg" alt="Nyhavn with Danish flags">
-      <h3>Welcoming spring with happy Danish people </h3>
+      <h3>Happy Danish people welcome spring</h3>
         <p>Did you know that the Danish have a tradition of celebrating the onset of spring by a series of funny customs, all taking place in the first week of March? 
           Neither did we. If you happen to be in Denmark during this week, you can expect to see many vendors selling a very strong minty drink, to be had together with 
           a bun of really spicy pölse, the two are to be enjoyed together with family and friends in the sunshine that we haven't seen for so long. 
           If you are fortunate, you might also come across the tradition of pop-up auctions in a garden near you. 
-          Intrigued? Click this article to find out more about what our teak-obsessed neighbours are up to in a few weeks time, all in the spirit of "hygge".</p>
+          Intrigued? Click this article to find out more about what our teak-obsessed neighbours are up to in a few weeks time, all in the spirit of hygge.</p>
     </article>
   </div>
 
@@ -57,7 +57,7 @@
     <article>
       <img src="./Images/ReindeerStockholm.jpg" alt="Raindeer standing around in snow">
       <h3>Come join the reindeer-run in Stockholm!</h3>
-        <p>A reindeer? In Stockholm? Isn't that a bit too far south? Yes, but reindeer can travel too you know, ever heard of Rudolph? 
+        <p>A reindeer? In Stockholm? Isn't that a bit too far south? Yes, but reindeer can travel too you know, just look at Rudolph!
           If you have no idea what to do this weekend and you want to experience something new, you can head out to Gärdet to watch a reindeer-run. Not with a sled behind 
           the reindeer but with humans on mini-skis. Sound wild? It is!
           The contestants will need to complete a course with twists and turns, while skiing behind their reindeer. Fastest to complete the course wins. And don't worry, this 
@@ -69,7 +69,7 @@
   <div class="grid-smaller-article">
     <article>
       <img src="./Images/Algaeburger.jpg" alt=" Hamburger with algae on top">
-      <h3>Can you actually eat that? Yes, if you are in Norway you can!</h3>
+      <h3>Wanna try an algaeburger in Norway?</h3>
         <p>Let's be honest here, Norway has not really been highlighted for its cuisine, with the national dish said to be the supermarket freeze-box pizza Grandiosa. That 
           aside, there is a dish not many of us have heard of. 
           If you are in Norway in the winter, check out our guide on where to find the secret, but delicious, lefse-burger. The burger is made with an algae that only grows 
@@ -83,10 +83,10 @@
       <img src="./Images/Iceland.jpg" alt="Woman standing beside large blocks of ice">
       <h3>Ice-festival coming up in Reykjavik</h3>
         <p>Much like the ice-hotel in northern Sweden, you can check-in to sleep on your very own icy bed in Reykjavik during the yearly ice-festival.
-          Aside from an ice hotel, of course equipped with an ice bar as well, there will be ice carving contests and much more. For those with a need for speed, there will 
-          be a chance to ride in a real bobsleigh at high speeds, together with professionals. The bobsleigh course is beautifully located just outside the city centre, with 
-          very scenic views around the course. For the little ones the will be ice rinks for skating, with the Icelandic olympic gold champions of ice hockey visting, as well
-          as a figure skating performance by the national figure skating champions to the hit song Husavik from the movie Eurovision Song Contest - the story of Fire saga.</p>
+          Aside from an ice hotel, equipped with an ice bar, there will be ice carving contests and much more! For those with a need for speed, you can 
+          can ride in a real bobsleigh at high speeds, together with professionals. The bobsleigh course is beautifully located just outside the city centre, with 
+          very scenic views around it. For the little ones the will be ice rinks for skating, with the Icelandic olympic gold champions of ice hockey visting, as well
+          as a figure skating performance by the national figure skating champions. They will skate to the hit song Husavik from the movie Eurovision - the story of Fire saga.</p>
     </article>
   </div>
 
@@ -94,10 +94,10 @@
     <article>
       <img src="./Images/Kitesurfing.jpg" alt="Kitesurfing in waves">
       <h3>Go kitesurfing on the Faroe Islands</h3>
-        <p>While the Faroe Islands might not be on the top ten most visited places for holidaying in the Scandics, it is actually a really good spot for those who enjoy 
+        <p>While the Faroe Islands might not be on the top ten most visited places for holidaying in the Nordics, it is actually a really good spot for those who enjoy 
           kitesurfing. It is ideally located as there is hardly a day without wind, and waves are plenty and fun. No, it isn't Mallorca, but if you make sure to dress right 
           you will have a blast. Just make sure you are not having too much fun with the winds, or they might carry you back to Denmark! As the daredevils we are, we of 
-          course went there for a crash course on how to kitesurf, in an enviromemnt hard to find elsewhere. There is even a kitesurfing history museum downtown, for those 
+          course went there for a crash course on how to kitesurf, in an environment hard to find elsewhere. There is even a kitesurfing history museum downtown, for those 
           who want to dive even deeper into the sport.</p>
     </article>
   </div>
@@ -108,7 +108,7 @@
       <h3>Kokkola brings the good stuff</h3>
         <p>If you find yourself in the vicinity of Kokkola in February, you should make a stop and explore this little gem. 
           Every February, Kokkola hosts a food festival where you can sample different Finnish-Swedish crossover food, as well as well known delicacies from both
-          countries. Word is out that the Karelian pirogues with a Swedish meatball filling are not to be missed. They are served with brown sauce dip and make an 
+          countries. Word is out that the Karelian pirogues with a Swedish meatball filling are not to be missed! They are served with brown sauce dip and make an 
           excellent street food dish. For those of you who have yet to try Memma, this is the place to be. Though traditionally served around Easter, this is the 
           early-bird version and it is served both with the more traditional cream, as well as the more contemporary version as part of a baked Alaska.</p>
     </article>
@@ -119,8 +119,8 @@
       <img src="./Images/Svalbard.jpg" alt="Puffin bird in water">
       <h3>Swim race on Svalbard</h3>
         <p>For those who dare, the annual swim race taking place in the harbour of Longyearbyen is coming up. The event draws a huge crowd and international participants,
-          who all eagerly get in the less than warm water to have a 8 km swim around the harbor waters. It is not only the cold water that poses an obstacle to the 
-          contestants, but also the fact that there might be a surprise polar bear when you least expect it. On the more positive side, the fauna here also ups your chances 
+          who all eagerly get in the less than warm water to have an 8 km swim around the harbor waters. It is not only the cold water that poses an obstacle to the 
+          contestants, but also the fact that there might be a surprise polar bear when you least expect it.. On the more positive side, the fauna here also ups your chances 
           of seeing a beluga whale and perhaps even a walrus. Puffin birds are plenty and you will see their bright orange feet whether you are in the water or safely 
           watching from land.</p>
     </article>
