--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
     <h2>Are you in the Nordic region and want to know what fun stuff is happening near you?</h2>
       <p>The Nordic countries are full of surprises and strange customs, and there is always something fun going on, regardless of which country you have decided to visit. 
         Check out our articles on the latest happenings in the Nordic country of your choice. 
-        Our Scandi-correspondents have made sure to find the most fun and quirky news from all over the Scandinavian countries, to ensure that there is something for everyone. 
+        Our Scandi-correspondents have made sure to find the most fun and quirky news from all over the Scandinavian and/or Nordic countries, to ensure that there is something for everyone. 
         Want to see how the Danish celebrate the first week of March? You'll find it here.
         Interested in what fun stuff you can eat in Norway when you visit? Yes, you'll find that here.
         Can you also find any fun outdoor activity in Sweden which includes animals? Of course, just click around and you'll hit the jackpot!</p>
