Fix text review cards

--- a/code/index.html
+++ b/code/index.html
@@ -104,7 +104,7 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../img/illustratedYogaCat.jpg"
+                  src="../img/illustratedYogaCat.png"
                   class="img-big-news-one"
                   alt="An illustration of a cat sitting in the yoga lotus position"
                 />
@@ -148,7 +148,7 @@
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Wow, bouldering was so much fun, and scary!</q>
+                        <q>Bouldering was so much fun and scary!</q>
                       </p>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
@@ -222,7 +222,7 @@
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Walking is nice, but I didn't work up a sweat</q>
+                        <q>Walking is nice, but no sweat!</q>
                       </p>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
