added images, still not working though

--- a/code/index.html
+++ b/code/index.html
@@ -58,6 +58,7 @@
         </div> 
 
         <div class="grid-item grid-big-news">
+          <img src="./police.jpg" alt="Two police and a car">
           <article>
             <h1>Murder solved after 15 years!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
