--- a/code/index.html
+++ b/code/index.html
@@ -279,25 +279,21 @@
         <img src="../img/a_cat.jpg" alt="Logo, black cat" />
         <span class="logoTextSpan">Michelle Wegler 2023</span>
       </div>
-      <div class="flex-parent">
-        <div class="flex-child">
-          <a
-            href="https://www.linkedin.com/in/michellewegler/"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
-            ><span class="sr-only">Linkedin</span></a
-          >
-        </div>
-        <div class="flex-child">
-          <a
-            href="https://github.com/smirrebinx/Responsive-Portfolio.git"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github" aria-hidden="true"></i
-            ><span class="sr-only">Github</span></a
-          >
-        </div>
+      <div class="footer-icons">
+        <a
+          href="https://www.linkedin.com/in/michellewegler/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+          ><span class="sr-only">Linkedin</span></a
+        >
+        <a
+          href="https://github.com/smirrebinx/Responsive-Portfolio.git"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github" aria-hidden="true"></i
+          ><span class="sr-only">Github</span></a
+        >
       </div>
     </footer>
   </body>
