--- a/code/index.html
+++ b/code/index.html
@@ -13,22 +13,24 @@
 
     <!-- Hero section -->
   
-  <div class="container-hero"> 
-      <img class="logo" src="/project-news-site/code/logo.svg" alt="Technigo logo">
+  <div class="container-hero">
+      <img class="logo" src="/code/logo.svg" alt="Technigo logo">
+
+    <!---Hamburger meny (only for mobile)-->
 
       <h1>Dog Parent Weekly</h1>
       <div class="hamburger"></div>
       <div class="hamburger"></div>
       <div class="hamburger"></div> 
       
-      <div class="menu">MENU</div>
-       <nav>
-          <ul class="navbar">
+  <div class="menu">MENU</div>
+    <nav>
+        <ul class="navbar">
             <li> <a href="#">HOME</a></li>
             <li> <a href="#">CONTACT</a></li>
             <li> <a href="#">CONTACT</a></li>
-          </ul>
-        </nav>
+         </ul>
+      </nav>
   </div> 
 
 <!--- End of hero section -->
@@ -37,38 +39,34 @@
 <main>
 
   <section class="big-mama-news">
-        <img src="/project-news-site/assets/unicorndog.jpg" class="big-news-img" alt="">
+        <img src="/code/unicorndog.jpg" class="big-news-img" alt="dog with a unicorn outfit">
         
         <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
   </section>
 </main>
-  <section class="small-mama-news-container">
-<div><img src="/project-news-site/assets/blackboston.jpg" class="small-news-gridkid" alt="">
-</div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="small-news-gridkid" alt="">
+    <section class="small-mama-news-container">
+      <div><img src="/code/blackboston.jpg" class="small-news-gridkid" alt="">
+      </div>
+      <div class="small-mama-news"> <img src="/code/blinkingpuppy.jpg" class="small-news-gridkid" alt="labrador puppy">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="small-news-gridkid" alt="">
+      <div class="small-mama-news"> <img src="/code/dogbomberjacket.jpg" class="small-news-gridkid" alt="amstaff in bomberjacket">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/dogwithhat.jpg" class="small-news-gridkid" alt="">
+      <div class="small-mama-news"> <img src="/code/dogwithhat.jpg" class="small-news-gridkid" alt="dog with a yellow hat">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/dogfood.jpg" class="small-news-gridkid" alt="">
+      <div class="small-mama-news"> <img src="/code/dogfood.jpg" class="small-news-gridkid" alt="dog eating veggies">
         </div>
-      <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" class="small-news-gridkid" alt=""> 
+      <div class="small-mama-news"> <img src="/code/pexels-amy-mccormack-5463180.jpg" class="small-news-gridkid" alt="puppies laying on green grass in a row"> 
       </div>
 
-    <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="small-news-gridkid" alt="">
+      <div class="small-mama-news"> <img src="/code/pexels-lumn-406014.jpg" class="small-news-gridkid" alt="dog looking up">
         </div>
-    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="small-news-gridkid" alt="">
-        </div>
-    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="small-news-gridkid" alt="">
-        </div>
-    <div class="small-mama-news"> <img src="/project-news-site/assets/winteriscoming.jpg" class="small-news-gridkid" alt="">
-     </div>
-  </section>
-
-    <section class="">
-      <!-- The other news  -->
+      <div class="small-mama-news grid-item"> <img src="/code/taxmedtröja.jpg" class="small-news-gridkid" alt="small dog in a knitted shirt">
+          </div>
+    <div class="small-mama-news grid-item"> <img src="/code/unicorndog.jpg" class="small-news-gridkid" alt="dog in a unicorn outfit">
+          </div>
+    <div class="small-mama-news"> <img src="/code/winteriscoming.jpg" class="small-news-gridkid" alt="dog in the winter">
+      </div>
     </section>
-  </div>
-</body>
+
+  </body>
 </html>
