--- a/code/contact.html
+++ b/code/contact.html
@@ -7,10 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Playfair+Display&family=Rubik+Gemstones&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&family=Rye&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/818262a977.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Technigo News Site - Michelle Wegler</title>
   </head>
   <body>
@@ -72,5 +76,27 @@
     <section class="">
       <!-- The other news  -->
     </section>
+    <footer>
+      <div class="logo-footer">
+        <img src="../img/a_cat.jpg" alt="Logo, black cat" />
+        <span class="logoTextSpan">Michelle Wegler 2023</span>
+      </div>
+      <div class="footer-icons">
+        <a
+          href="https://www.linkedin.com/in/michellewegler/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+          ><span class="sr-only">Linkedin</span></a
+        >
+        <a
+          href="https://github.com/smirrebinx/Responsive-Portfolio.git"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github" aria-hidden="true"></i
+          ><span class="sr-only">Github</span></a
+        >
+      </div>
+    </footer>
   </body>
 </html>
