Center review text and icons

--- a/code/index.html
+++ b/code/index.html
@@ -114,8 +114,11 @@
                     href="https://www.instagram.com/touchthepeacock/"
                     target="_blank"
                     rel="noopener noreferrer"
-                    ><i class="fa-brands fa-instagram" aria-hidden="true"></i
-                    ><span class="sr-only">Instagram</span></a
+                  >
+                    <div class="icon-div">
+                      <i class="fa-brands fa-instagram" aria-hidden="true"></i
+                      ><span class="sr-only">Instagram</span>
+                    </div></a
                   >
                 </figcaption>
               </figure>
@@ -150,11 +153,23 @@
                       <p class="review">
                         <q>Bouldering was so much fun and scary!</q>
                       </p>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
                     </div>
                     <figure>
                       <img
@@ -182,21 +197,23 @@
                         <p class="review">
                           <q>I absolutely adore outdoor yoga!</q>
                         </p>
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
+                        <div class="icon-div">
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                        </div>
                       </div>
                       <figure>
                         <img
@@ -224,10 +241,20 @@
                       <p class="review">
                         <q>Walking is nice, but no sweat!</q>
                       </p>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
                     </div>
                     <figure>
                       <img
@@ -252,9 +279,17 @@
                   <div class="card">
                     <div>
                       <p class="review"><q>Omg, I hate crunches!</q></p>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
                     </div>
                     <figure>
                       <img
