added first images, needs fixing

--- a/code/index.html
+++ b/code/index.html
@@ -58,7 +58,7 @@
         </div> 
 
         <div class="grid-item grid-big-news">
-          <img src="./police.jpg" alt="Two police and a car">
+          <img src="police.jpg" alt="Two police officers and car"/>
           <article>
             <h1>Murder solved after 15 years!</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
