--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
 
             <!--LOGO for Company name-->        
             <div class="company-name">
-              <a href="x"class="active">True Crime News</a>
+              <a href="x"class="active"><img src="logo.png" alt="Two police officers and car"/></a>
             </div>
 
             <!-- NAVBAR FOR DESKTOP AND PAD -->
@@ -58,34 +58,24 @@
         </div> 
 
         <div class="grid-item grid-big-news">
-          <img src="police.jpg" alt="Two police officers and car"/>
-          <article>
-            <h1>Murder solved after 15 years!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-              sed do eiusmod tempor incididunt ut labore et dolore magna 
-              aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
-              tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
-              volutpat sed cras. </p>
-          </article>
+          <img src="police-6-9.jpg" alt="Two police officers and car"/>
+          <div class ="big-news">
+            <article>
+              <h1>Murder solved after 15 years!</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
+                    tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
+                    volutpat sed cras. </p>
+            </article>
+          </div>
         </div>
         <div class="grid-item grid-other-news">
-          <article>
+
             <h1>Murder solved after 15 years!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-              sed do eiusmod tempor incididunt ut labore et dolore magna 
-              aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
-              tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
-              volutpat sed cras. </p>
-          </article>
         </div>
         <div class="grid-item grid-other-news">
-          <article>
             <h1>Murder solved after 15 years!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-              sed do eiusmod tempor incididunt ut labore et dolore magna 
-              aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
-              tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
-              volutpat sed cras. </p>
         </div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
